# dfs

./: Cargo.toml  README.md
src/: config.rs  dirs.rs  main.rs  profile.rs
